--- a/exemple_de_set.env
+++ b/exemple_de_set.env
@@ -1,12 +1,12 @@
-OWNER_NAME="boniphace"
+OWNER_NAME="photographer"
 PREFIX="~"
 PUBLIC_MODE='non'
 AUTO_READ_STATUS="non"
 AUTO_DOWNLOAD_STATUS="oui"
-BOT_NAME= "BONIPHACE-MD"
+BOT_NAME= "A1 PHOTOGRAPHER-MD"
 IMAGE_MENU= "https://static.animecorner.me/2023/08/op2.jpg"
-NUMERO_OWNER= "255716661569"
-OWNER_NAME= "᚛boniphace᚜"
+NUMERO_OWNER= "255696497709"
+OWNER_NAME= "᚛photographer᚜"
 DATABASE_URL= ""
 WARN_COUNT= ""
 OPENAI_API_KEY= ""
