--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BONIPHACE-MD ",
+  "name": "A1 PHOTOGRAPHER-MD ",
   "version": "2.0.0",
   "description": "",
   "main": "index.js",
@@ -17,7 +17,7 @@
     "whatsapp-bot",
     "zokou"
   ],
-  "author": "boniphace",
+  "author": "photographer",
   "license": "ISC",
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
