--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "description":"Best WhatsApp Bot Developed By Photographer Tech Contact me 255696497709, Thank you for choose A1 PHOTOGRAPHER-MD",
   "keywords":["bot","node","baileys","whatsapp"],
   "logo":"https://telegra.ph/file/6a11e2155910ffa20ca81.jpg",
-  "repository":"https://github.com/Boniphace1/A1 PHOTOGRAPHER-MD",
+  "repository":"https://github.com/Boniphace1/PHOTOGRAPHER-MD",
   "succes_url":"/",
   "stack":"container",
   "env":{
