--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "A1 PHOTOGRAPHER-MD ",
+  "name": "PHOTOGRAPHER-MD ",
   "version": "2.0.0",
   "description": "",
   "main": "index.js",
